syntax = "proto3";

package protos;

option go_package = "protos/";

service BusService{
  rpc RequestBus(BusRequest) returns (BusResponse) {}

}
message BusRequest {
  int64 BusNumber = 1;
}

message BusResponse {
  double longitude = 1;
  double latitude = 2;
}