syntax = "proto3";

package protos;

option go_package = "./gen";

service MetricsService{
  rpc RequestTemp(TemperatureRequest) returns (stream TemperatureResponse) {}
  rpc RequestPol(PollutionRequest) returns (stream PollutionResponse) {}
}

message TemperatureResponse {
  string city = 1;
  string district = 2;
  int64 temperature = 3;
  int64 humidity = 4;
}

message PollutionResponse {
  string city = 1;
  string district = 2;
  int64 co2 = 3;
  int64 pm25 = 4;
}

message TemperatureRequest {
  string city = 1;
  int64 type = 2;
}

message PollutionRequest {
  string city = 1;
  int64 type = 2;
}